travis config, auto deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,20 @@
 language: node_js
 node_js:
   - "6"
+
 env:
   global:
   - GH_PAGES_DEPLOY: YES
   - REPO_SLUG: candyHuang/vue-destop
+
+install:
+  - npm install
+
+script: sh .deploy.sh
+
 cache:
   directories:
   - node_modules
 branches:
   only:
   - master
-install:
-  - npm install
-
