--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "axios": "^0.15.2",
     "element-ui": "^1.0.0",
     "es6-promise": "^4.0.5",
-    "vue": "^2.0.1",
+    "vue": "^2.1.0",
     "vue-router": "^2.0.1"
   },
   "devDependencies": {
@@ -40,6 +40,7 @@
     "url-loader": "^0.5.7",
     "vue-loader": "^9.4.0",
     "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "^2.1.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
